원하는 변경 내용

--- a/index.html
+++ b/index.html
@@ -63,9 +63,17 @@
   }
   .loading { text-align: center; padding: 40px; color: #aaa; font-size: 15px; }
   .verse-block { margin-bottom: 18px; }
-  .verse-block-title {
-    font-size: 14px; color: #e94560; margin-bottom: 8px; font-weight: bold;
-    border-left: 3px solid #e94560; padding-left: 8px;
+  .verse-block-content { display: flex; align-items: flex-start; gap: 10px; }
+  .verse-marker {
+    min-width: 52px;
+    text-align: center;
+    font-size: 13px;
+    font-weight: bold;
+    color: #e94560;
+    border: 1px solid #e94560;
+    border-radius: 8px;
+    padding: 8px 6px;
+    background: #16213e;
   }
 </style>
 </head>
@@ -337,14 +345,18 @@ function renderText(fullText, cards, container) {
 
 function renderVerseBlock(wrapper, verse, cards) {
   wrapper.innerHTML = "";
-  const title = document.createElement("div");
-  title.className = "verse-block-title";
-  title.textContent = `${verse.Book} ${verse.Chapter}장 ${verse.Verse}절`;
-  wrapper.appendChild(title);
+  const content = document.createElement("div");
+  content.className = "verse-block-content";
+  wrapper.appendChild(content);
+
+  const marker = document.createElement("div");
+  marker.className = "verse-marker";
+  marker.textContent = `${verse.Verse}절`;
+  content.appendChild(marker);
 
   const textBox = document.createElement("div");
   textBox.className = "full-text";
-  wrapper.appendChild(textBox);
+  content.appendChild(textBox);
   renderText(verse.FullText, cards, textBox);
 }
 
@@ -528,9 +540,9 @@ async function openSelectedVerses() {
   state.currentVerseIndex = -2;
   document.getElementById("listView").style.display = "none";
   document.getElementById("verseView").style.display = "block";
-  document.getElementById("verseTitle").textContent = `${state.book} ${state.chapter}장 - 선택 ${selectedVerses.length}절`;
+  document.getElementById("verseTitle").textContent = `${state.book} ${state.chapter}장`;
   document.getElementById("speechResult").textContent = "";
-  document.getElementById("speechStatus").textContent = "음성 대기";
+  document.getElementById("speechStatus").textContent = `음성 대기 (${selectedVerses.length}절 선택)`;
 
   updateNav();
   const nav = document.getElementById("nav");
